[package]
name = "sosistab2-obfsudp"
version = "0.1.0"
edition = "2021"
repository="https://github.com/geph-official/sosistab2-obfsudp"
license="ISC"
description="obfuscated UDP transport for sosistab2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.5"
anyhow = "1.0.75"
arc-swap = "1.6.0"
async-trait = "0.1.74"
blake3 = "1.5.0"
bytes = "1.5.0"
derivative = "2.2.0"
hex = "0.4.3"
itertools = "0.11.0"
log = "0.4.20"
lru = "0.12.0"

moka = {version="0.12.1", features=["sync"]}
once_cell = "1.18.0"
parking_lot = "0.12.1"
priority-queue = "1.3.2"
probability = "0.20.3"
rand = "0.7"
reed-solomon-erasure = "6.0.0"
replay_filter = "0.1.2"
ring = "0.17.5"
scopeguard = "1.2.0"
serde = "1.0.189"
smol = "1.3.0"
smol-timeout = "0.6.0"
smolscale = "0.4.0"
sosistab2="0.10"
stdcode = "0.1.14"
x25519-dalek = "1"
